test/sema/typeck/return/return-type-mismatch.dora
class Foo[T]
fn f(): Foo[Int32] { Foo[Int64]() }
